knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__PQ_AP_Score__mdt/fields/pqcrush__Category_Point_Total__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Category_Point_Total__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Category Point Total used in percent based component</description>
    <label>Category Point Total</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>