knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__PQ_AP_Score__mdt/fields/pqcrush__Count_BP_High__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Count_BP_High__c</fullName>
    <defaultValue>5</defaultValue>
    <description>The high breakpoint for the number of objects when calculating the score</description>
    <inlineHelpText>If the count is above this value it will have the high breakpoint score value for the score</inlineHelpText>
    <label>Count Breakpoint High</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>