knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__PQ_AP_Score__mdt/fields/pqcrush__Score_BP_High__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Score_BP_High__c</fullName>
    <defaultValue>10</defaultValue>
    <description>The score used if the count is equal to or greater than the high breakpoint value</description>
    <label>Count Breakpoint Score High</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>