knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__PQ_AP_Score__mdt/fields/pqcrush__Score_Label__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Score_Label__c</fullName>
    <description>The label to show in the individual score breakdown, see help text for additional info</description>
    <inlineHelpText>Please note - You can use this field to overwrite the label on packaged scores but it is recommended to edit the custom labels for those instead.  For admin created scores if this field is left blank it will instead display the metadata record name for the score</inlineHelpText>
    <label>Score Label</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>