knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__PQ_AP_Score__mdt/fields/pqcrush__Score_Object__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Score_Object__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, this objects score is included in the overall Account Plan Score</description>
    <label>Score Object</label>
    <type>Checkbox</type>
</CustomField>