knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__PQ_AP_Score__mdt/fields/pqcrush__Threshold_Limit__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Threshold_Limit__c</fullName>
    <defaultValue>10</defaultValue>
    <description>The threshold Limit used to set a value that sets a limit or boundary</description>
    <label>Threshold Limit</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>