knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__PQ_AP_Score__mdt/fields/pqcrush__Time_BP_Low__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Time_BP_Low__c</fullName>
    <defaultValue>7</defaultValue>
    <description>The number of days used for the lower time breakpoint since any records of this type have been modified</description>
    <inlineHelpText>This is the first breakpoint after 0 days</inlineHelpText>
    <label>Time Breakpoint Low</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>