knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__PQ_AP_Score__mdt/fields/pqcrush__Use_Time_Decay__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Use_Time_Decay__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If set then score will decrease by a multiplier based on how long since any records were modified</description>
    <inlineHelpText>This is only available for packaged score objects</inlineHelpText>
    <label>Use Time Decay</label>
    <type>Checkbox</type>
</CustomField>