knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__PQ_AP_Score__mdt/validationRules/pqcrush__Time_breakpoints_valid.validationRule-meta.xml
<ValidationRule>
    <fullName>pqcrush__Time_breakpoints_valid</fullName>
    <active>true</active>
    <description>Validates that the time decay breakpoints are not below zero days and are in order</description>
    <errorConditionFormula>pqcrush__Time_BP_Low__c &lt; 0 || pqcrush__Time_BP_Low__c &gt; pqcrush__Time_BP_Mid__c || pqcrush__Time_BP_Mid__c &gt; pqcrush__Time_BP_High__c</errorConditionFormula>
    <errorMessage>One or more of the time breakpoints is out of order or has a negative value</errorMessage>
</ValidationRule>